tests/baselines/reference/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.errors.txt
tests/cases/compiler/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.ts(12,1): error TS2322: Type 'C' is not assignable to type 'A'.
  Property 'prop' is missing in type 'C'.
tests/cases/compiler/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.ts(13,5): error TS2322: Type 'typeof B' is not assignable to type 'A'.
  Property 'prop' is missing in type 'typeof B'.
tests/cases/compiler/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.ts(16,5): error TS2322: Type 'C' is not assignable to type 'B'.
  Property 'prop' is missing in type 'C'.
tests/cases/compiler/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.ts(17,5): error TS2322: Type 'typeof B' is not assignable to type 'B'.
  Property 'prop' is missing in type 'typeof B'.


==== tests/cases/compiler/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.ts (4 errors) ====
    interface A {
        prop();
    }
    class B {
        public prop() { }
    }
    class C {
        public static prop() { }
    }
    
    var a: A = new B();
    a = new C(); // error prop is missing
    ~
!!! error TS2322: Type 'C' is not assignable to type 'A'.
!!! error TS2322:   Property 'prop' is missing in type 'C'.
    a = B; // error prop is missing
        ~
!!! error TS2322: Type 'typeof B' is not assignable to type 'A'.
!!! error TS2322:   Property 'prop' is missing in type 'typeof B'.
!!! related TS6213 tests/cases/compiler/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.ts:13:5: Did you mean to use 'new' with this expression?
    a = C;
    
    var b: B = new C(); // error prop is missing
        ~
!!! error TS2322: Type 'C' is not assignable to type 'B'.
!!! error TS2322:   Property 'prop' is missing in type 'C'.
    b = B; // error prop is missing
        ~
!!! error TS2322: Type 'typeof B' is not assignable to type 'B'.
!!! error TS2322:   Property 'prop' is missing in type 'typeof B'.
!!! related TS6213 tests/cases/compiler/staticMemberOfClassAndPublicMemberOfAnotherClassAssignment.ts:17:5: Did you mean to use 'new' with this expression?
    b = C;
    b = a;
    
    var c: C = new B();
    c = B;
    c = C;
    c = a;
    